...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <AutoCompleteTextView
                    android:id="@+id/et_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edad"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:text="@string/guardar"
                android:textColor="@color/colorBlanco" />

...
