...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_redactProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-2dp"
            android:background="@drawable/botton_style"
            android:orientation="horizontal"
            android:paddingStart="10dp"
...
